<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="375dp"
        android:layout_height="45dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="85dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_decimal"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:text="@string/decimal" />

        <RadioButton
            android:id="@+id/radio_binario"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:text="@string/binario" />

        <RadioButton
            android:id="@+id/radio_octal"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:text="@string/octal" />

        <RadioButton
            android:id="@+id/radio_hexa"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/hexadecimal" />
    </RadioGroup>

    <EditText
        android:id="@+id/ct_uno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/ct1"
        app:layout_constraintStart_toEndOf="@+id/cBinario"
        app:layout_constraintTop_toBottomOf="@+id/caja" />

    <EditText
        android:id="@+id/ct_dos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/ct2"
        app:layout_constraintStart_toEndOf="@+id/cOctal"
        app:layout_constraintTop_toBottomOf="@+id/ct_uno" />

    <EditText
        android:id="@+id/ct_tres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/ct3"
        app:layout_constraintStart_toEndOf="@+id/cHexa"
        app:layout_constraintTop_toBottomOf="@+id/ct_dos" />

    <EditText
        android:id="@+id/caja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/c1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <CheckBox
        android:id="@+id/cDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="38dp"
        android:text="@string/decimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cHexa" />

    <CheckBox
        android:id="@+id/cBinario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:text="@string/binario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja" />

    <CheckBox
        android:id="@+id/cOctal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="33dp"
        android:text="@string/octal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cBinario" />

    <CheckBox
        android:id="@+id/cHexa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="41dp"
        android:text="@string/Hexadecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cOctal" />

    <EditText
        android:id="@+id/ct_cuatro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/decimal"
        app:layout_constraintStart_toEndOf="@+id/cDecimal"
        app:layout_constraintTop_toBottomOf="@+id/ct_tres" />

</androidx.constraintlayout.widget.ConstraintLayout>